# intfinity

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
examples/: prims.rs
src/: intfinity.rs  lib.rs  numeric_impls.rs  operations.rs  traits.rs
tests/: comparators_tests.rs  display_trait_tests.rs  examples.rs  intfinity_macro_tests.rs  negate_trait_tests.rs  operations_tests.rs  tests.rs  zero_trait_tests.rs
